unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_apex_tests__c.field-meta.xml
<CustomField>
	<fullName>metazoa_apex_tests__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Apex Tests</label>
	<type>Checkbox</type>
</CustomField>