unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_apply_transforms__c.field-meta.xml
<CustomField>
	<fullName>metazoa_apply_transforms__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Apply Transforms</label>
	<type>Checkbox</type>
</CustomField>