unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_code_quality__c.field-meta.xml
<CustomField>
	<fullName>metazoa_code_quality__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Code Quality</label>
	<type>Checkbox</type>
</CustomField>