unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_created_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_created_date__c</fullName>
	<label>Created Date</label>
	<type>DateTime</type>
</CustomField>