unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_created_guid__c.field-meta.xml
<CustomField>
	<fullName>metazoa_created_guid__c</fullName>
	<label>Created GUID</label>
	<length>200</length>
	<type>Text</type>
</CustomField>