unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_deploy_managed__c.field-meta.xml
<CustomField>
	<fullName>metazoa_deploy_managed__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Deploy Managed</label>
	<type>Checkbox</type>
</CustomField>