unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_destination_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_destination_date__c</fullName>
	<label>Destination Date</label>
	<type>DateTime</type>
</CustomField>