unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_destination_item__c.field-meta.xml
<CustomField>
	<fullName>metazoa_destination_item__c</fullName>
	<label>Destination Item</label>
	<length>200</length>
	<type>Text</type>
</CustomField>