unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_detailed_comments__c.field-meta.xml
<CustomField>
	<fullName>metazoa_detailed_comments__c</fullName>
	<label>Detailed Comments</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>