unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_empty_recycle__c.field-meta.xml
<CustomField>
	<fullName>metazoa_empty_recycle__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Empty Recycle</label>
	<type>Checkbox</type>
</CustomField>