unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_ignore_warnings__c.field-meta.xml
<CustomField>
	<fullName>metazoa_ignore_warnings__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Ignore Warnings</label>
	<type>Checkbox</type>
</CustomField>