unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_delete__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_delete__c</fullName>
	<label>Job Delete</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>