unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_limits__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_limits__c</fullName>
	<label>Job Limits</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>