unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_name__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_name__c</fullName>
	<label>Job Name</label>
	<length>200</length>
	<type>Text</type>
</CustomField>