unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_quality__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_quality__c</fullName>
	<label>Job Quality</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>