unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_tests__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_tests__c</fullName>
	<label>Job Tests</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>