unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_job_transforms__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_transforms__c</fullName>
	<label>Job Transforms</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>