unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_made_changes__c.field-meta.xml
<CustomField>
	<fullName>metazoa_made_changes__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Made Changes</label>
	<type>Checkbox</type>
</CustomField>