unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_minmax_quality__c.field-meta.xml
<CustomField>
	<fullName>metazoa_minmax_quality__c</fullName>
	<label>Minmax Quality</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>