unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_push_results__c.field-meta.xml
<CustomField>
	<fullName>metazoa_push_results__c</fullName>
	<label>Push Results</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>