unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_push_type__c.field-meta.xml
<CustomField>
	<fullName>metazoa_push_type__c</fullName>
	<label>Push Type</label>
	<length>200</length>
	<type>Text</type>
</CustomField>