unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_quick_deploy__c.field-meta.xml
<CustomField>
	<fullName>metazoa_quick_deploy__c</fullName>
	<label>Quick Deploy</label>
	<length>200</length>
	<type>Text</type>
</CustomField>