unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_remove_references__c.field-meta.xml
<CustomField>
	<fullName>metazoa_remove_references__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Remove References</label>
	<type>Checkbox</type>
</CustomField>