unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_searchable_tags__c.field-meta.xml
<CustomField>
	<fullName>metazoa_searchable_tags__c</fullName>
	<label>Searchable Tags</label>
	<length>200</length>
	<type>Text</type>
</CustomField>