unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_source_company__c.field-meta.xml
<CustomField>
	<fullName>metazoa_source_company__c</fullName>
	<label>Source Company</label>
	<length>200</length>
	<type>Text</type>
</CustomField>