unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_source_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_source_date__c</fullName>
	<label>Source Date</label>
	<type>DateTime</type>
</CustomField>