unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_source_userid__c.field-meta.xml
<CustomField>
	<fullName>metazoa_source_userid__c</fullName>
	<label>Source Userid</label>
	<length>200</length>
	<type>Text</type>
</CustomField>