unpackaged/main/default/objects/metazoa_snapshot_push__c/fields/metazoa_successful_push__c.field-meta.xml
<CustomField>
	<fullName>metazoa_successful_push__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Successful Push</label>
	<type>Checkbox</type>
</CustomField>